# LaneSeg-ACC

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py  test_ai.py
Lane-Detection-UNet/: eval-lane.py  inference.py  train.py  video_infer2.py  yolo_integrated.py
config/: segformer_params.yaml
launch/: segformer_inference.launch.py  unet_laneseg.launch.py
models/: .gitkeep
models/unet/: export_standard_onnx.py  export_standard_onnx_unet.py
models/unet/models/: unet_depthwise_nano.py
qcar2_laneseg_acc/: __init__.py  camera_buffer.py  color_segmentation_node.py  image_capture_node.py  segformer_decoder_node.py  tensor_fix.py  tensorrt_inference_node.py
qcar2_teleop/: setup.py
qcar2_teleop/qcar2_teleop/: color_segmentation_node.py  yellow_line_follower_controller.py  yellow_line_position_node.py
train_unet/: CHANGES.md  QUICKSTART.py  README.md  TRAINING_CODE_README.md  config.py  prepare_dataset.py  test_visualization.py  train_unet_notebook.ipynb
utils/: test_cupy.py
